--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <p class="info">Para 1
+        
+    </p>
+    <p class="info"></p>
+
     <script src="script2.js"></script>
 </body>
 </html>
