--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
+<!-- <!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>DOM Lesson 1</title>
+    <style>
+      .active { color: white; background: teal; padding: 4px; }
+    </style>
+  </head>
+  <body>
+    <h1 id="title">Original title</h1>
+    <button id="btn">Click me</button>
+
+    <script src="script2.js"></script>
+    <rel="stylesheet" href="style.css">
+  </body>
+</html> -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DOM Lesson 1</title>
 </head>
 <body>
-    <p class="info">Para 1
-        
-    </p>
-    <p class="info"></p>
+    <h1 id="heading">Hello DOM!</h1>
+    <button id="btn">Click Me</button>
 
     <script src="script2.js"></script>
 </body>
 </html>
+
+
